--- a/src/components/message-item/message-item.scss
+++ b/src/components/message-item/message-item.scss
@@ -11,7 +11,7 @@
       background-color: red;
     }
   }
-  &.succses {
+  &.success {
     .message-item__header::before {
       background-color: green;
     }
